Fix Java 8 compatibility: replace Set.of() and isBlank()